--- a/project_login.html
+++ b/project_login.html
@@ -58,7 +58,7 @@ Employee Designation</div></div>
    </div>
 <div class="col-lg-8" style="height:200px;">
 <center>
-<img style="float:center; padding-top:10px; height:200px;" src="../image/loginimage.png">
+<img style="float:center;  height:180px;" src="../image/loginimage.png">
 </center></div>
 <div class="col-lg-2" style="height:200px; background-color:#dedede;"><center><br>
    </div></div>
@@ -67,49 +67,54 @@ Employee Designation</div></div>
 <div class="row">
 <div class="col-lg-2" style="height:100px; background-color:#dedede;"><center><br>
    </div>
-<div class="col-lg-4" style="padding-left:430px"><center>
-<br>
+<div class="col-lg-4" style="height=100px; padding-left:250px;"><center>
+
  <h4>   User-Id:
 </h4>
 	<center>
 </div>
 <div class="col-lg-4">
-<br>
-    <input type="text" id="emailId" placeholder="Enter Your User-Id"/>
+
+    <input type="text" style="height=100px;" id="emailId" placeholder="Enter Your User-Id"/>
  <p id="validemail"></p>
 </div>   
+<div class="col-lg-2" style="height:100px; background-color:#dedede;"><center><br>
+   </div>
 </div>  
    
 <div class="row">
 <div class="col-lg-2" style="height:100px; background-color:#dedede;"><center><br>
    </div>
-<div class="col-lg-4" style="padding-left:430px"><center>
-<br>
+<div class="col-lg-4" style="padding-left:250px"><center>
+
   <h4>  Password:
             </h4>
 	<center>
 </div>
 <div class="col-lg-4">
-<br>
+
     <input type="password" id="passwordId" placeholder="Enter Your password"/>
 <p id="validPassword"></p>
 
 </div>
-  <div class="col-lg-2" style="height:200px; background-color:#dedede;"><center><br>
+  <div class="col-lg-2" style="height:100px; background-color:#dedede;"><center><br>
    </div>
 </div>      
 <div class="row">
-<div class="col-lg-12"><center><br>
-    <input type="submit" value="LogIn"/>
+<div class="col-lg-2" style="height:150px; background-color:#dedede;"><center><br>
+   </div>
+<div class="col-lg-8"><center>
+    <input type="submit" value="  LogIn  "/>
 
 </div>   
+<div class="col-lg-2" style="height:150px; background-color:#dedede;"><center><br>
+   </div>
 </div>                                                                                      
 </form> 
-<div class="col-lg-12" style="height:100px; background-color:#dedede;"><center><br>
-   </div>           
+         
 </div>
 <div class="row">
-<div class="col-lg-12" style="height:100px;  font-size:18px; color:white; background-color:black; float:right;">
+<div class="col-lg-12" style="height:100px; font-size:18px; color:white; background-color:black; float:right;">
 
 <p>Deloitte refers to a Deloitte member firm, one of its related entities, or Deloitte Touche Tohmatsu Limited ("DTTL").
 Each Deloitte member firm is a separate legal entity and a member 
