--- a/userinfochange.html
+++ b/userinfochange.html
@@ -27,30 +27,58 @@ function changeUserInfoFunction(){
 <img style="float:right; height:100px;" src="../image/del.jpg">
 Employee Designation</div></div>
 <div class="row">
-<div class="col-lg-12" style="height:200px; color:white;">
+
+</div>
+
+<div class="row">
+<div class="col-lg-2" style="height:100px;  font-size:68px;  background-color:#dedede;"></div>
+<div class="col-lg-8" style="height:100px;">
 <center>
 <img style="float:center; padding-top:10px; height:200px;" src="../image/admin.png">
-</center></div></div>
+</center></div>
+<div class="col-lg-2" style="height:100px;  font-size:68px;  background-color:#dedede;"></div>
+</div>
 <div class="row">
-<div class="col-lg-12" style="height:100px;">
+<div class="col-lg-2" style="height:100px;  background-color:#dedede;"></div>
+<div class="col-lg-8" style="height:100px;"></div>
+<div class="col-lg-2" style="height:100px;  background-color:#dedede;"></div>
+</div>
+
 <form onsubmit="return changeUserInfoFunction()">
 <div class="row">
-<div class="col-lg-6" style="padding-left:430px"><center>
+<div class="col-lg-2" style="height:100px;  background-color:#dedede;"></div>
+
+<div class="col-lg-4" style="padding-left:250px"><center>
 <br>
   <h4>  User-Id:</h4>
 	<center>
 </div>
-<div class="col-lg-6" style="padding-left:20px;">
+<div class="col-lg-4" style="padding-left:20px;">
 <br>
     <input type="text" id="userId" placeholder="Enter Your User-Id" autofocus />
  <p id="validUserInfoChange"></p>
 </div>   
+<div class="col-lg-2" style="height:100px;  background-color:#dedede;"></div>
+
 </div>     
+
 <div class="row">
-<div class="col-lg-12"><center><br>
+<div class="col-lg-2" style="height:100px;  background-color:#dedede;"></div>
+
+<div class="col-lg-8"><center><br>
     <input type="submit" value="Change User Information"/>
 
 </div>   
+<div class="col-lg-2" style="height:100px;  background-color:#dedede;"></div>
+</div> 
+<div class="row">
+<div class="col-lg-2" style="height:220px;  background-color:#dedede;"></div>
+
+<div class="col-lg-8" >
+   
+
+</div>   
+<div class="col-lg-2" style="height:220px;  background-color:#dedede;"></div>
 </div> 
 </form>
 </body>
