--- a/project_login.html
+++ b/project_login.html
@@ -73,9 +73,9 @@ Employee Designation</div></div>
 </h4>
 	<center>
 </div>
-<div class="col-lg-4">
+<div class="col-lg-4" style="height:100px;">
 
-    <input type="text" style="height=100px;" id="emailId" placeholder="Enter Your User-Id"/>
+    <input type="text" style="height=100px;" name="user-Id" id="emailId" placeholder="Enter Your User-Id" autofocus />
  <p id="validemail"></p>
 </div>   
 <div class="col-lg-2" style="height:100px; background-color:#dedede;"><center><br>
@@ -91,9 +91,9 @@ Employee Designation</div></div>
             </h4>
 	<center>
 </div>
-<div class="col-lg-4">
+<div class="col-lg-4" style="height:100px;">
 
-    <input type="password" id="passwordId" placeholder="Enter Your password"/>
+    <input type="password" name="password" id="passwordId" placeholder="Enter Your password"/>
 <p id="validPassword"></p>
 
 </div>
@@ -103,13 +103,13 @@ Employee Designation</div></div>
 <div class="row">
 <div class="col-lg-2" style="height:150px; background-color:#dedede;"><center><br>
    </div>
-<div class="col-lg-8"><center>
+<div class="col-lg-8"  style="height:150px;"><center>
     <input type="submit" value="  LogIn  "/>
-
+</center>
 </div>   
-<div class="col-lg-2" style="height:150px; background-color:#dedede;"><center><br>
+<div class="col-lg-2" style="height:150px; background-color:#dedede;"><center><br></center>
    </div>
-</div>                                                                                      
+</div>                                                                                       
 </form> 
          
 </div>
